rough carousel layout

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -5,19 +5,85 @@
 :root {
     --primary: #04D1F1;
     --secondary: #ed9146;
+    --white: #ffffff;
 }
 
 
 html {
     margin: 0;
     padding: 0;
+    font-size: 62.5%;
 }
 
 body {
     background: var(--primary);
-    color: #ffffff;
+    color: var(--white);
+    position: relative;
+    height: 100vh;
+}
+
+h1 {
+    font-size: 6rem;
+}
+h2 {
+    font-size: 5rem;
+}
+
+a {
+    text-decoration: none;
 }
 
 .header, .footer {
     background: var(--secondary);
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.btn {
+    background: var(--secondary);
+    font-size: 2rem;
+    border-radius: 20px;
+    border: 3px solid var(--white);
+}
+
+.btn:hover {
+    opacity: .7;
+}
+.link-btn {
+    color: var(--white);
+    padding: .3rem 4rem;
+}
+
+/* Loops/Carousel style begin */
+
+
+.carousel {
+    display: flex;
+    border-radius: 20px;
+    background: var(--secondary);
+    max-width: 30%;
+    max-height: 30%;
+    padding: 1rem;
+    border: 3px solid var(--white);
+    margin-bottom: 1.5rem;
+
+}
+
+.carousel-img {
+    width: 100%;
+    height: 100%;
+}
+
+/* Footer style begin */
+
+.footer {
+    position: absolute;
+    width: 100vw;
+    bottom: 0;
 }
