--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -64,17 +64,29 @@ a {
 
 /* Loops/Carousel style begin */
 
+.loopSection-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    overflow: none;
+    height: 100%;
+}
+
+.loop-container {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 
 .carousel {
     display: flex;
     border-radius: 20px;
     background: var(--secondary);
-    max-width: 30%;
-    max-height: 30%;
+    min-height: 85%;
+    width: 100%;
     padding: 1rem;
     border: 3px solid var(--white);
     margin-bottom: 1.5rem;
-
+    overflow: none;
 }
 
 .carousel-img {
